tests/rosetta/out/Smalltalk/bitmap-ppm-conversion-through-a-pipe.out
/tmp/bitmap-ppm-conversion-through-a-pipe.st:11: parse error, expected ']'
