tests/rosetta/out/Smalltalk/bitmap-ppm-conversion-through-a-pipe.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| pixelFromRgb r g b rgbFromPixel NewBitmap data row col FillRgb y p x px SetPxRgb nextRand main bm seed i |
pixelFromRgb := [:c | r := (((c / 65536) asInteger) % 256).
g := (((c / 256) asInteger) % 256).
b := (c % 256).
Dictionary from:{'R'->r. 'G'->g. 'B'->b}. ].
rgbFromPixel := [:p | ((((((p at: 'R') * 65536)) + (((p at: 'G') * 256)))) + (p at: 'B')). ].
NewBitmap := [:x :y | data := {}.
row := 0.
[(row < y)] whileTrue: [.
r := {}.
col := 0.
[(col < x)] whileTrue: [.
r := r copyWith: Dictionary from:{'R'->0. 'G'->0. 'B'->0}.
col := (col + 1).
].
.
data := data copyWith: r.
row := (row + 1).
].
.
Dictionary from:{'cols'->x. 'rows'->y. 'px'->data}. ].
FillRgb := [:b :c | y := 0.
p := pixelFromRgb value: c.
[(y < (b at: 'rows'))] whileTrue: [.
x := 0.
[(x < (b at: 'cols'))] whileTrue: [.
px := b at: 'px'.
row := px at: y.
row at: x put: p.
px at: y put: row.
b at: 'px' put: px.
x := (x + 1).
].
.
y := (y + 1).
].
. ].
SetPxRgb := [:b :x :y :c | ((((((((x < 0)) or: [((x >= (b at: 'cols')))])) or: [((y < 0))])) or: [((y >= (b at: 'rows')))])) ifTrue: [
false.
] .
px := b at: 'px'.
row := px at: y.
row at: x put: pixelFromRgb value: c.
px at: y put: row.
b at: 'px' put: px.
true. ].
nextRand := [:seed | (((((seed * 1664525)) + 1013904223)) % 2147483648). ].
main := [ bm := NewBitmap value: 400 value: 300.
FillRgb value: bm value: 12615744.
seed := now value.
i := 0.
[(i < 2000)] whileTrue: [.
seed := nextRand value: seed.
x := (seed % 400).
seed := nextRand value: seed.
y := (seed % 300).
SetPxRgb value: bm value: x value: y value: 8405024.
i := (i + 1).
].
.
x := 0.
[(x < 400)] whileTrue: [.
y := 240.
[(y < 245)] whileTrue: [.
SetPxRgb value: bm value: x value: y value: 8405024.
y := (y + 1).
].
.
y := 260.
[(y < 265)] whileTrue: [.
SetPxRgb value: bm value: x value: y value: 8405024.
y := (y + 1).
].
.
x := (x + 1).
].
.
y := 0.
[(y < 300)] whileTrue: [.
x := 80.
[(x < 85)] whileTrue: [.
SetPxRgb value: bm value: x value: y value: 8405024.
x := (x + 1).
].
.
x := 95.
[(x < 100)] whileTrue: [.
SetPxRgb value: bm value: x value: y value: 8405024.
x := (x + 1).
].
.
y := (y + 1).
].
. ].
main value.
